trying to fix ios safari overflow again... exciting

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,7 +11,7 @@
   font-family: 'Poppins', sans-serif;
 }
 
-body {
+#root {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
@@ -74,7 +74,7 @@ main {
   -ms-hyphens: auto;
 }
 
-.release-date {}
+/* .release-date {} */
 
 /* Card Hover Effects */
 .film-image-group:hover .film-image-overlay {
